--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo of organisation" class="img-fluid" width="41"height="30"></a>
                 <div class="collapse navbar-collapse" id="Navbar">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"> Home</span></a></li>
-                        <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"> About</span></a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                        <li class="nav-item active "><a class="nav-link" href="#"><span class="fa fa-home fa-lg"> Home</span></a></li>
+                        <li class="nav-item "><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"> About</span></a></li>
+                        <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg">Menu</i></a></li>
                         <li class="nav-item"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card fa-lg">Contact</span></a></li>
                     </ul> 
                 </div>           
@@ -42,6 +42,9 @@
                 </div>
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" alt="logo of organisation" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm align-self-center">     
+                <a href="#jump"><button class="btn btn-warning btn-block"> Reserve Table</button></a>
                 </div>
             </div>
         </div>
@@ -77,7 +80,7 @@
                 <div class="media">
                     
                     <div class="media-body">
-                        <h2 class="mt-0">Weekend Grand Buffet</h2>
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span> </h2>
                         <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                     </div>
                     <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
@@ -98,6 +101,67 @@
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row row-content" id="jump">
+            <div class="col-12 col-sm-8 offset-2">
+                <div class="card">
+                    <div class="card-header bg-warning text-white">
+                        <h4> Reserve a Table </h4>
+                    </div>
+                    <div class="card-body ">
+                        <form >
+                            <div class="form-group row">
+                              <label for="number-of-guests" class="col-sm-2 col-form-label">Number of Guests</label>
+                                <div class="col-sm-6">
+                                     <div class="form-check form-check-inline">
+                                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                         <label class="form-check-label" for="inlineRadio1">1</label>
+                                     </div>
+
+                                    <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                      <label class="form-check-label" for="inlineRadio2">2</label>
+                                    </div>
+
+                                    <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+                                      <label class="form-check-label" for="inlineRadio3">3</label>
+                                    </div>
+                            
+                                    <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                                      <label class="form-check-label" for="inlineRadio1">4</label>
+                                    </div>
+
+                                    <div class="form-check form-check-inline">
+                                      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                                      <label class="form-check-label" for="inlineRadio1">5</label>
+                                    </div>
+
+                                   <div class="form-check form-check-inline">
+                                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                                     <label class="form-check-label" for="inlineRadio1">6</label>
+                                  </div>
+                              </div>
+                            </div>
+                              <div class="form-group row">
+                                  <label for="dateandtime" class="col-sm-2 col-form-label">Date and Time</label>
+                                    <div class="col-sm-4">
+                                        <input type="date" class="form-control" id="date" name="Date" placeholder="Date">
+                                    </div>
+
+                                    <div class="col-sm-4">
+                                        <input type="time" class="form-control" id="time" name="Time" placeholder="Time">
+                                    </div>
+                                </div>
+                               <div class="form-group row">
+                                    <div class="offset-sm-2 col-sm-3">
+                                        <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                        </form>
                     </div>
                 </div>
             </div>
